removed box and text shadow effect for higher legibility, fixed issue with headshot image on home page, added more margin to home page icons

--- a/src/app/pages/home/home.module.scss
+++ b/src/app/pages/home/home.module.scss
@@ -11,7 +11,8 @@
 
 .icons {
   display: flex;
-  margin: 5px 0px;
+  margin: 10px 0px;
+  margin-bottom: 15px;
   font-size: 40px;
 }
 
@@ -74,7 +75,6 @@
   &.right {
     max-width: 330px;
     flex-grow: 1;
-    align-self: stretch;
     display: none;
     @media (min-width: 1500px) {
       display: block;
